content/v4/http-outbound.md
title = "Making HTTP Requests"
template = "main"
date = "2023-11-04T00:00:01Z"
enable_shortcodes = true
[extra]
url = "https://github.com/spinframework/spin-docs/blob/main/content/v4/http-outbound.md"

---
- [Using HTTP From Applications](#using-http-from-applications)
- [Restrictions](#restrictions)
- [Granting HTTP Permissions to Components](#granting-http-permissions-to-components)
  - [Configuration-Based Permissions](#configuration-based-permissions)
- [Making HTTP Requests Within an Application](#making-http-requests-within-an-application)
  - [Local Service Chaining](#local-service-chaining)
  - [Intra-Application HTTP Requests by Route](#intra-application-http-requests-by-route)

Spin provides an interface for you to make outgoing HTTP requests.

{{ details "Why do I need a Spin interface? Why can't I just use my language's HTTP library?" "The current version of the WebAssembly System Interface (WASI) doesn't provide a sockets interface, so HTTP libraries can't be built to Wasm. The Spin interface means Wasm modules can bypass this limitation by asking Spin to perform the HTTP request on their behalf." }}

## Using HTTP From Applications

The outbound HTTP interface depends on your language.

> Under the surface, Spin uses the `wasi-http` interface. If your tools support the Wasm Component Model, you can work with that directly; but for most languages the Spin SDK is more idiomatic.

{{ tabs "sdk-type" }}

{{ startTab "Rust"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://docs.rs/spin-sdk/latest/spin_sdk/http/index.html)

To send requests, use the [`spin_sdk::http::send`](https://docs.rs/spin-sdk/latest/spin_sdk/http/fn.send.html) function. This takes a request argument and returns a response (or error).

The request you pass to `send` may be:

* [`http::Request`](https://docs.rs/http/latest/http/request/struct.Request.html) - typically constructed via `http::Request::builder()`
* [`spin_sdk::http::Request`](https://docs.rs/spin-sdk/latest/spin_sdk/http/struct.Request.html) - typically constructed via `spin_sdk::http::Request::get()`, `spin_sdk::http::Request::post()`, or `spin_sdk::http::Request::builder()`
* Any type which implements the `spin_sdk::http::IntoRequest` trait

Generally, you should use `OutgoingRequest` when you need to stream the outbound request body; otherwise, the `Request` types are usually simpler.

The response is a `spin_sdk::http::Response`.

Here is an example of doing outbound HTTP when you want to wait for the entire response and load it into memory as a single blob:

```rust
use spin_sdk::http::{EmptyBody, FullBody, IntoResponse, Request, Response};
use spin_sdk::http::body::IncomingBodyExt;
use spin_sdk::http_service;
use http::Method;

#[http_service]
async fn handle_p3_body_test(req: Request) -> anyhow::Result<impl IntoResponse> {
    // Create the outbound request object
    let request = Request::builder()
        .method(Method::GET)
        .uri("https://spinframework.dev/")
        .body(EmptyBody::new())?;

    // Send the request and await the response
    let response = spin_sdk::http_wasip3::send(request).await?;

    // Get the outbound response body as a bytes::Bytes
    let body = response.into_body().bytes().await?;

    // Process the response bytes
    let response_len = body.len();

    // Return a response to the inbound request
    Ok((http::StatusCode::OK, response_len.to_string()))
}
```

Here is an example of doing outbound HTTP when you want to process the response as a stream, handling each chunk as it arrives from the server and then discarding it:

```rust
use futures::StreamExt;
use spin_sdk::http::{EmptyBody, FullBody, IntoResponse, Request, Response};
use spin_sdk::http::body::IncomingBodyExt;
use spin_sdk::http_service;
use http::Method;

#[http_service]
async fn handle_request(_req: Request) -> anyhow::Result<impl IntoResponse> {
    // Create the outbound request object
    let request = Request::builder()
        .method(Method::GET)
        .uri("https://spinframework.dev/")
        .body(EmptyBody::new())?;

    // Send the request and await the response
    let response = spin_sdk::http::send(request).await?;

    // Get the outbound response body as a stream
    let mut body = response.into_body().stream();

    // Use the response stream
    let mut response_len = 0;
    while let Some(chunk) = body.next().await {
        response_len += chunk?.len();
    }

    // Return a response to the inbound request
    Ok((http::StatusCode::OK, response_len.to_string()))
}
```

Here is an example of doing outbound HTTP when you want to stream outbound request data to the remote host:

```rust
use bytes::Bytes;
use futures::{SinkExt, StreamExt};
use http_body_util::StreamBody;
use spin_sdk::http::body::IncomingBodyExt;
use spin_sdk::http::{IntoResponse, Request};
use spin_sdk::http_service;
use http::Method;

#[http_service]
async fn handle_p3_body_test(req: Request) -> anyhow::Result<impl IntoResponse> {
    // Set up a channel - one end of this is the streaming body, the other
    // end is where the client writes data into the streaming body.
    let (mut tx, rx) = futures::channel::mpsc::channel::<Bytes>(1024);

    // Spawn a task to send data into the stream
    spin_sdk::spawn(async move {
        for index in 0..20 {
            let line = format!("test line {index}\n");
            tx.send(line.into()).await.unwrap();
        }
    });

    // Create the outbound request object
    let request = Request::builder()
        .method(Method::POST)
        .uri("https://spinframework.dev/")
        .body(StreamBody::new(rx))?;

    // Adapt the Bytes-based stream to something that `http` understands
    let rx = rx.map(|value| anyhow::Ok(http_body::Frame::data(value)));

    // Send the request with the streaming body, and await the response.
    // The outbound body could still be streaming during the await, and
    // even while the response body is being processed (although that won't
    // happen in this simple case!).
    let response = spin_sdk::http::send(request).await?;

    // Process the response, in this case buffering in memory, but
    // this could be streaming too as in the previous example
    let body = response.into_body().bytes().await?;
    let text = String::from_utf8_lossy(&body[..]);
    Ok((http::StatusCode::OK, text.to_string()))
}
```

For more examples, [see the `spin-rust-sdk` repository](https://github.com/spinframework/spin-rust-sdk/blob/main/examples).

{{ blockEnd }}

{{ startTab "TypeScript"}}

HTTP operations are available via the standard JavaScript `fetch` function. The Spin runtime maps this to the underlying Wasm interface. For example:

```javascript
const response = await fetch("https://example.com/users");
```

**Notes**

You can find a complete example of using outbound HTTP in the JavaScript SDK repository on [GitHub](https://github.com/spinframework/spin-js-sdk/tree/main/examples/common-patterns/outbound-http)

**Note**: `fetch` currently only works when building for the HTTP trigger.  

{{ blockEnd }}

{{ startTab "Python"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://spinframework.github.io/spin-python-sdk/v4/http/index.html)

HTTP functions and classes are available in the `http` module. The function name is [`send`](https://spinframework.github.io/spin-python-sdk/v4/http/index.html#spin_sdk.http.send). The [request type](https://spinframework.github.io/spin-python-sdk/v4/http/index.html#spin_sdk.http.Request) is `Request`, and the [response type](https://spinframework.github.io/spin-python-sdk/v4/http/index.html#spin_sdk.http.Response) is `Response`. For example:

```python
from spin_sdk import http
from spin_sdk.http import Request, Response, send

class HttpHandler(http.Handler):
    async def handle_request(self, request: Request) -> Response:
        response = await send(Request("GET", "https://random-data-api.fermyon.app/animals/json", {}, None))
        return response
```

**Notes**

* For compatibility with idiomatic Python, types do not necessarily match the underlying Wasm interface. For example, `method` is a string.
* Request and response bodies are `bytes`. (You can pass literal strings using the `b` prefix.)  Pass `None` for no body.
* Request and response headers are dictionaries.
* Errors are signalled through exceptions.

You can find a complete example for using outbound HTTP in the [Python SDK repository on GitHub](https://github.com/spinframework/spin-python-sdk/tree/main/examples/outgoing-request).

{{ blockEnd }}

{{ startTab "Go"}}

> [**Want to go straight to the reference documentation?**  Find it here.](https://pkg.go.dev/github.com/spinframework/spin-go-sdk/v3/http)

HTTP functions are available in the `github.com/spinframework/spin-go-sdk/v3/http` package. [See Go Packages for reference documentation.](https://pkg.go.dev/github.com/spinframework/spin-go-sdk/v3/http) The general function is named `Send`, but the Go SDK also surfaces individual functions, with request-specific parameters, for the `Get` and `Post` operations. For example:

```go
import (
	spinhttp "github.com/spinframework/spin-go-sdk/v3/http"
)

res1, err1 := spinhttp.Get("https://random-data-api.fermyon.app/animals/json")
res2, err2 := spinhttp.Post("https://example.com/users", "application/json", json)

request, err := http.NewRequest("PUT", "https://example.com/users/1", bytes.NewBufferString(user1))
request.Header.Add("content-type", "application/json")
res3, err3 := spinhttp.Send(req)
```

**Notes**

* In the `Post` function, the body is an `io.Reader`. The Spin SDK reads this into the underlying Wasm byte array.
* The `NewRequest` function is part of the standard library. The `Send` method adapts the standard request type to the underlying Wasm interface.
* Errors are returned through the usual Go multiple return values mechanism.

You can find a complete example for using outbound HTTP in the [Spin repository on GitHub](https://github.com/spinframework/spin-go-sdk/tree/main/examples/http-outbound).

{{ blockEnd }}

{{ blockEnd }}

## Restrictions

Spin applications cannot set the `Host` header on outbound requests. (This is a limitation of the Wasmtime runtime which underpins Spin.)

## Granting HTTP Permissions to Components

By default, Spin components are not allowed to make outgoing HTTP requests. This follows the general Wasm rule that modules must be explicitly granted capabilities, which is important to sandboxing. To grant a component permission to make HTTP requests to a particular host, use the `allowed_outbound_hosts` field in the component manifest:

```toml
[component.example]
allowed_outbound_hosts = [ "https://random-data-api.fermyon.app", "http://api.example.com:8080" ]
```

The Wasm module can make HTTP requests _only_ to the specified hosts. If a port is specified, the module can make requests only to that port; otherwise, the module can make requests only on the default port for the scheme. Requests to other hosts (or ports) will fail with an error.

You can use a wildcard to allow requests to any subdomain of a domain:

```toml
[component.example]
allowed_outbound_hosts = [ "https://*.example.com" ]
```

You can also pass an IPv4 CIDR address:

```toml
[component.example]
allowed_outbound_hosts = [ "https://192.168.1.0/24" ]
```

For development-time convenience, you can also pass the string `"https://*:*"` in the `allowed_outbound_hosts` collection. This allows the Wasm module to make HTTP requests to _any_ host and on any port. However, once you've determined which hosts your code needs, you should remove this string and list the hosts instead.  Other Spin implementations may restrict host access and disallow components that ask to connect to anything and everything!

### Configuration-Based Permissions

You can use [application variables](./variables.md#adding-variables-to-your-applications) in the `allowed_outbound_hosts` field.

## Making HTTP Requests Within an Application

If your Spin application functions as a set of microservices, you'll often want to make requests directly from one component to another within the same application. It's best not to use a full URL for this, because that's not portable across different deployment environments - the URL in the cloud is different from the one in your development environment. Instead, Spin provides two ways to make inter-component requests:

* By component ID ("local service chaining")
* By route

Both of these work only from HTTP components. That is, if you want to make an intra-application request from, say, a Redis trigger, you must use a full URL.

### Local Service Chaining

To make an HTTP request to another component in your application, use the special `<component-id>.spin.internal` host name. For example, an outbound HTTP request to `authz.spin.internal` will be handled by the `authz` component.

In this way of doing self-requests, the request is passed in memory without ever leaving the Spin host process. This is extremely fast, as the two components are wired almost directly together, but may reduce deployment flexibility depending on the nature of the microservices. Also, public components that are the target of service chaining requests may see URLs in both routed and chained forms: therefore, if they parse the URL (for example, extracting a resource identifier from the path), they must ensure both forms are correctly handled.

> Service chaining is the only way to call [private endpoints](./http-trigger#private-endpoints).

You must still grant permission by including the relevant `spin.internal` hosts in `allowed_outbound_hosts`:

```toml
allowed_outbound_hosts = ["http://authz.spin.internal", "https://reporting.spin.internal"]
```

You may use either the `http` or `https` scheme, but `allowed_outbound_hosts` must allow the chosen scheme. For example, if `allowed_outbound_hosts` contains only `https://authz.spin.internal`, then a request to `http://authz.spin.internal` will be disallowed.

To allow local chaining to _any_ component in your application, you can use a subdomain wildcard:

```toml
allowed_outbound_hosts = ["http://*.spin.internal"]
```

However, the wildcard implies that the component requires _all other_ components to be local to it. You will therefore not be able to use [selective deployment](./running-apps#splitting-an-application-across-environments) for an application that uses wildcard service chaining.

> Local service chaining may not be supported on distributed Spin hosts.

### Intra-Application HTTP Requests by Route

To make an HTTP request to another route with your application, you can pass just the route as the URL. For example, if you make an outbound HTTP request to `/api/customers/`, Spin prepends the route with whatever host the application is running on. It also replaces the URL scheme (`http` or `https`) with the scheme of the current HTTP request. For example, if the application is running in the cloud, Spin changes `/api` to `https://.../api`.

> You can also use the special host `self.alt` to perform self-requests by route. This is important for the JavaScript `fetch` wrapper, which handles relative requests in a way that doesn't work with `allowed_outbound_hosts`. For example, you would write `fetch('http://self.alt/api')`.
> 
In this way of doing self-requests, the request undergoes normal HTTP processing once Spin has prepended the host. For example, in a cloud deployment, the request passes through the network, and potentially back in through a load balancer or other gateway. The benefit of this is that it allows load to be distributed across the environment, but it may count against your use of bandwidth.

You must still grant permission by including `self` or `self.alt` in `allowed_outbound_hosts`:

```toml
allowed_outbound_hosts = ["http://self", "https://self.alt"]
```

> It doesn't matter which you use - either 'allow' form enables both relative and `self.alt` URLs.
